--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     <h1 class="heading">CAT SEARCHING</h1>
     <select id="selectElement" class="breed-select"></select>
     <!-- <p class="loader">Loading data, please wait...</p> -->
-    <p class="loader"></p>
+    <div class="loader-container">
+      <p class="loader"></p>
+    </div>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
 
