--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <h1 class="heading">CAT SEARCHING</h1>
+    <div class="heading">
+      <h1>CAT SEARCHING</h1>
+      <p>by Arseniy</p>
+    </div>
     <select id="selectElement" class="breed-select"></select>
     <!-- <p class="loader">Loading data, please wait...</p> -->
     <div class="loader-container">
